test/corpus/BSV_imports_exports.txt
===================
Imports and Exports
===================

package WithImportsAndExports;
  export Something :: *;
  export SomethingElse :: *;
  export TwoThings :: *, AtOnce :: *;
  export YetAnotherThing :: *;
  export SomeName;
  export someName;
  export SomeNameWithFields (..);
  export someNameWithFields (..);
  export SomeMix :: *, OfMany, things (..), Really (..);
  import Something :: *;
  import SomethingElse :: *;
  import TwoThings :: *, AtOnce :: *;
  import YetAnotherThing :: *;
endpackage

-------

(bsv_package
  (bsv_packageIde)
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde))
                  (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde))
                  (bsv_exportItem)
                  (bsv_exportItem)
                  (bsv_exportItem))
  (bsv_importDecl (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde))
                  (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde))))
